adding final changes

--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,8 @@ update in index
 
 Now im doing git add........
 
-im adding a second add....
+im adding a second add....ADDED AFTER THE ADD...
 
+more lien being added 
 </body>
 </html>
