Update from GitHub

--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,8 @@ Now im doing git add........
 
 im adding a second add....ADDED AFTER THE ADD...
 
+  THIS WAS ADDED IN GITHUB
+
 more lien being added 
 </body>
 </html>
